--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.30"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.30"
-  }
+	"name": "app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.2.0",
+		"@next/eslint-plugin-next": "^15.4.1",
+		"date-fns": "^4.1.0",
+		"next": "14.2.30",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.1",
+		"@eslint/js": "^9.31.0",
+		"eslint": "^9.31.0",
+		"eslint-config-next": "^15.4.1",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-react": "^7.37.5",
+		"globals": "^16.3.0",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
+	}
 }
