--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
 		"@next/eslint-plugin-next": "^15.4.1",
+		"@supabase/supabase-js": "^2.52.0",
 		"date-fns": "^4.1.0",
 		"next": "14.2.30",
 		"react": "^18",
