--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
 		"@heroicons/react": "^2.2.0",
 		"@next/eslint-plugin-next": "^15.4.1",
 		"@supabase/supabase-js": "^2.52.0",
-		"date-fns": "^4.1.0",
+		"date-fns": "^2.28.0 ",
 		"next": "14.2.30",
 		"react": "^18",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.1",
 		"@eslint/js": "^9.31.0",
 		"eslint": "^9.31.0",
-		"eslint-config-next": "^15.4.1",
+		"eslint-config-next": "^15.4.2",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-react": "^7.37.5",
 		"globals": "^16.3.0",
