--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@supabase/supabase-js": "^2.52.0",
 		"date-fns": "^2.28.0 ",
 		"next": "14.2.30",
+		"next-auth": "^5.0.0-beta.29",
 		"react": "^18",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18"
